# research_team

./: .env.example  .gitignore  AGENTS.md  README.md  _diag.py  _test_pi_rpc.py  dev_plan.md  package-lock.json  poc_discussion.py  pyproject.toml
docs/: requirements.md  tasks.md  us1_guide.md  us2_guide.md
docs/superpowers/plans/: 2026-04-12-research-team-agent.md  2026-04-13-fix-human-search-lock-url-config.md  2026-04-13-project-management.md  2026-04-14-reference-files.md  2026-04-14-search-result-diversity.md  2026-04-14-serp-locator-extraction.md  2026-04-14-us2-wbs-progress.md  2026-04-18-us5-2-specialist-discussion.md  2026-04-19-book-chapter-section-pipeline.md  2026-04-20-pattern-b-flag.md
scripts/: diagnose_google_dom.py  test_extractor_integration.py  trace_test.py
src/research_team/agents/: auditor.py  base_agent.py  csm.py  pm.py  (+2 more)
tests/: conftest.py  dummy_server.py
tests/integration/: test_e2e.py  test_human_search_e2e.py  test_research_flow.py
tests/unit/: test_artifact_reconstructor.py  test_artifact_writer.py  test_audit_log.py  test_book_pipeline.py  test_coordinator.py  test_discussion.py  test_document_editor.py  test_dummy_server.py  test_dynamic_factory.py  test_google_extractor.py  test_google_parser.py  test_markdown_output.py  test_modify_agent.py  test_pdf_output.py  test_pi_bridge.py  test_project_manager.py  test_quality_loop.py  test_run_manifest.py  test_run_progress.py  test_search_api.py  test_search_human.py  test_security.py  test_serp_extractor.py  test_serper.py  test_us1.py  test_us2_6.py
tests/us/: us1_scenario_a.md
(+42 files in other folders)
